back to the future java 8